[package]
name = "spring-init"
version = "0.1.0"
edition = "2021"
authors = ["Shane Witbeck <shane@surly.dev>"]
description = "A CLI tool for managing Spring Boot project lifecycle"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.43", features = ["full"] }
textwrap = "0.16"   

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
